# disaster-launcher

./: AppRun  CMakeLists.txt  CMakePresets.json  DisasterLauncher.desktop  README.md  appicon.aps  components.c  components.h  fs.c  fs.h  gui.c  gui.h  image.c  imporktant.h  label.c  log.c  log.h  main.c  make_appimage.sh  servers.json  sock.c  sock.h  task_dotnet.c  task_install.c  task_launch.c  tasks.c  tasks.h  types.h  vcpkg.json  web.c  web.h
.github/workflows/: cmake.yml
